kubernetes/platform/config/monitoring/prometheus-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Prometheus"
    gethomepage.dev/group: "Platform"
    gethomepage.dev/icon: "prometheus.svg"
    gethomepage.dev/widget.type: "prometheus"
    gethomepage.dev/widget.url: "http://prometheus-operated.monitoring.svc:9090"
spec:
  parentRefs:
    - name: internal
      namespace: istio-gateway
  hostnames:
    - "prometheus.${internal_domain}"
  rules:
    - backendRefs:
        - name: prometheus-operated
          port: 9090
